--- a/style.css
+++ b/style.css
@@ -1,192 +1,115 @@
-@font-face {
-  font-family: "SF Pro";
-  src: url(SF-Pro.ttf)format("truetype")
-}
-@font-face {
-  font-family: "Open Sans";
-  src: url(OpenSans-Regular.ttf)format("truetype")
-}
-body {
-  font-family:"Open Sans";
-  margin: 0;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url("dj-grayscale2.png");
-  background-size: cover;
-  background-attachment: fixed;
-}
-nav {
-  /* background-color:rgba(69, 98, 167, .8); */
-  font-size:1.25em;
-  grid-area:nav;
-  text-align:center;
-  padding:.5em;
-  margin:0px;
-  /*These next 4 lines make it stick at the top*/
-  position: -webkit-sticky;
-  position: sticky;
-  top:0;
-  z-index:999;
-  
-  
-}
-header{
-  grid-area: header;
-}
-header h1{
-  color: white;
-  font-size:300%;
-}
-header div{
-  padding:5% 10%;
-}
-#facebook{
-  margin-left:2%;
-}
-main{
-  grid-area:main;
-}
-footer{
-  grid-area:footer;
-  color:white;
-  background-color: rgba(50, 49, 171, .8);
-  text-align:center;
-}
-.nav-logo {
-  margin-left:0;
-  grid-area:nav-logo;
-}
-
-#logo {
-  max-height:2em;
-}
-.nav1 {
-  grid-area: nav1;
-}
-.nav2 {
-  grid-area: nav2;
-}
-.nav3 {
-  grid-area: nav3;
-}
-.nav4 {
-  grid-area: nav4;
-}
-.nav5 {
-  grid-area: nav5;
-}
-.nav6 {
-  grid-area: nav6;
-}
-.nav7 {
-  grid-area: nav7;
-}
-/*---------------------------Mobile Layout----------------------------*/
-#home-container {
-  grid-template-areas: 
-  "nav"
-  "header"
-  "main"
-  "footer";
-}
-#nav-container {
-  display:grid;
-  grid-template-areas:
-  "nav1"
-  "nav2"
-  "nav3"
-  "nav4"
-  "nav5"
-  "nav6"
-  "nav7"
-}
-.toggle-nav {
-  display:grid; /*This is what allows the hamburger icon and "Menu" to display*/
-}
-#flex-nav ul {
-  display: none; /*jQuery toggles the nav from to this class to the .open when clicked*/
-  text-align:center;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.sub-menu1{
-  display:none;
-}
-
-#flex-nav ul.open { /*.open is the class that gets toggled when clicked (with help from the jQuery code)*/
-  display:grid;
-  background-color: #3231ab;
-  }
-  
-/* #flex-nav li {
-  padding-left:10px;
-  padding-top:10px;
-  
-  } */
-
-.menu-item {
-  color:white;
-  text-decoration:none;
-  padding: 1vmin 2vmin;
-  background-color: #3231ab;
-  border-radius:10vmin;
-  }
-#nav-logo{
-  background-color: transparent;
-}
-.menu-item:hover {
-  color: #9dff24;
-  padding: 1.25vmin 2.25vmin;
-  transition:.3s;
-  }
-/*---------------------------Tablet Layout----------------------------*/
-@media only screen and (min-width: 480px)  {
-  #home-container {
-    grid-template-areas: 
-    "nav"
-    "header main"
-    "footer";
-  }
-  #nav-container {
-    display:grid;
-    grid-template-areas:
-    "nav-logo"
-    "nav1"
-    "nav2"
-    "nav3"
-    "nav4"
-    "nav5" 
-    "nav6"
-    "nav7"
-  }
-}
-/*---------------------------Desktop Layout---------------------------*/
-@media only screen and (min-width: 960px)  {
-  #home-container {
-    grid-template-columns:33% 33% auto;
-    grid-template-areas: 
-    "nav nav nav"
-    "header header main"
-    "footer footer footer";
-  }
-  #nav-container {
-    display:grid;
-    grid-template-areas:
-    "nav-logo nav1 nav2 nav3 nav4 nav5 nav6 nav7";
-  }
-    
-.toggle-nav {
-    display: none; /*Makes the hamburger icon with the word "Menu" to disappear at this screen size*/
-  }
-.nav-container {
-  padding:0;
-}
-#flex-nav ul {
-    display:grid;
-    text-align:center;
-  }
-  #flex-nav li {
-    padding:0px;
-    
-    }
+ /* Add a black background color to the top navigation */
+ * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: capitalize;
+    text-decoration: none;
+ }
+ body {
+    min-height:100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url("dj-grayscale2.png");
+    background-size: cover;
+    background-attachment: fixed;
+ }
  
-} 
+ nav{
+    position:fixed;
+    top:0; left:0; right:0;
+    background: #ffffff;
+    padding:0px 7%;
+    display:flex;
+    align-items: center;
+    justify-content:space-between ;
+    z-index:1000;
+ }
+ nav .logo{
+    font-weight: bolder;
+    font-size:25px;
+    color:#333;
+ }
+ nav .navbar ul{
+    list-style:none;
+ }
+ nav .navbar ul li{
+    position:relative;
+    float:left;
+ }
+ nav .navbar ul li a{
+    font-size:20px;
+    padding:20px;
+    color:#333;
+    display:block;
+ }
+ nav .navbar ul li a:hover{
+    background:#333;
+    color:#ffffff;
+ }
+ nav .navbar ul li ul{
+    position:absolute;
+    left:0;
+    width:200px;
+    background: #ffffff;
+    display:none;
+ }
+ nav .navbar ul li ul li{
+    width:100%; 
+    border-top: 1px solid rgba(0,0,0,.1);
+
+ }
+ nav .navbar ul li:focus-within > ul,
+ nav .navbar ul li:hover > ul{
+    display: initial;
+ }
+ #menu-bar{
+    display:none;
+ }
+ nav label{
+    font-size: 20px;
+    color:#333;
+    cursor:pointer;
+    display:none;
+ }
+/*---------------------------Mobile Layout----------------------------*/
+/*---------------------------Tablet Layout----------------------------*/
+/* @media only screen and (min-width: 480px)  {
+
+} */
+
+
+/*---------------------------Desktop Layout---------------------------*/
+/* @media only screen and (min-width: 960px){
+
+}*/
+@media only screen and (max-width:991px){
+    nav{
+        padding:20px;
+
+    }
+    nav label{
+        display: initial;
+    }
+    nav .navbar{
+        position:absolute;
+        top:100%; left:0; right:0;
+        background:#fff;
+        border-top: 1px solid rgba(0,0,0,.1);
+        display:none;
+
+    }
+    nav .navbar ul li{
+        width: 100%;
+
+    }
+    nav .navbar ul li ul{
+        position:relative;
+        width:100%;
+    }
+    nav .navbar ul li ul li{
+        background:#eee;
+    }
+    #menu-bar:checked ~ .navbar{
+        display: initial;
+    }
+}
